@@ -1,5 +1,12 @@
 2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* Makefile.am:
+	* Mono.Addins/aaa.cs:
+	* Mono.Addins.csproj:
+	* Mono.Addins/AddinAttribute.cs: Canvi
+
+2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* Mono.Addins/Addin.cs: tyui
 
 2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>
